# cpp-cli11

./: .gitignore  CMakeLists.txt  Makefile  cli11_test  notes.txt  rebuild.sh  vcpkg.json
src/: cli.cpp  cli.h  cli.hpp  config_loader.cpp  config_loader.h  core_defs.hpp  debouncer.cpp  debouncer.h  glob.cpp  glob.h  main.cpp  notes.md  sample.cpp  sample.h  watcher.cpp  watcher.h  watcher.hpp
src/config/: loader.cpp  loader.hpp
src/schema/: schema.cpp  schema.hpp
